deployments/gateway-test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway--test
  annotations:
    elifesciences.org/default-project: ${cluster_name}
