deployments/gateway-test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: "api.test-gateway.elifesciences.org"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dataplane-ingress-api-gateway-wd68p-7pk2m
            port:
              number: 80
  tls:
  - secretName: api-gateway-tls
    hosts:
    - "api.test-gateway.elifesciences.org"
