deployments/gateway-test/podinfo.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: podinfo
  namespace: gateway--test
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: api-gateway
  hostnames:
  - api.test-gateway.elifesciences.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /podinfo
    backendRefs:
    - name: podinfo
      namespace: podinfo--staging
      port: 9898
